<resources>
    <string name="app_name">TipTime</string>
    <string name="button">Button</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="good_15">Good (15%)</string>
    <string name="okay_7">Okay (7%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="tip_amount_s">Tip Amount: %s</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
</resources>